docs: skill deploy-synology juga kelola Aplikasi.command (launcher macOS)
- Tiap deploy update .bat (Windows) DAN .command (macOS), sinkron nama jar
- macOS: tanpa -XX:PermSize/MaxPermSize (dihapus sejak Java 8)

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>